--- a/style.css
+++ b/style.css
@@ -1,23 +1,18 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    font-family: Georgia, Times, serif;
+    background-color: #004e8a;
   }
   
   h1 {
     text-align: center;
     margin-top: 30px;
-  }
-  
-  h2 {
-    text-align: center;
-    margin-top: 10px;
-    color: #666;
+    color: #ddd;
   }
   
   .calculadora {
     width: 314px;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: #000000;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -37,14 +32,15 @@ body {
     margin-right: 5px;
     margin-bottom: 5px;
     font-size: 16px;
-    background-color: #eee;
+    background-color: #2e2d2d;
+    color: aliceblue;
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
   
   input[type="button"]:hover {
-    background-color: #ddd;
+    background-color: #4e4e4e;
   }
   
   input[type="button"]:last-child {
